2008-09-23  Luis Medinas  <lmedinas@gnome.org>

	* configure.in:
	* plugins/Makefile.am:
	* plugins/inotify-glue.c (inotify_glue_watch),
	(inotify_glue_ignore):
	* plugins/inotify-syscalls.h:
	* plugins/inotify.h:

	Use system inotify instead of the built one. Patch 
	from Adrian Bunk <bunk@stusta.de> minor by me. 
	Closes bgo #553155.

2008-07-26  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	Bug 544773 – Desktop file does not validate

	* data/muine.desktop.in:

	Remove obsolete "Application" category and the Encoding
	line as well.

2008-07-15  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* configure.in:

	Lower intltool requirement to 0.37.1 to hopefully fix
	the build on systems not having intltool 0.4.0. See bug
	#537352 for a discussion of this.

2008-07-12  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* configure.in:

	Update version number to 0.8.9.

2008-07-12  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* configure.in:
	* Makefile.am

	 Bumped intltool requirement to 0.40 and no longer ship
	 files generated by intltool in the tarball. This fixes
	 "make dist" with newer intltool versions.

2008-07-12  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* Makefile.am:

	Tiny cleanups.

2008-07-12  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* configure.in:

	Explicitly check for pkg-config.

2008-07-12  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* NEWS:

	Update for the upcoming release.

2008-07-12  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* data/images/Makefile.am:

	Ship pixel-fit icon source files by adding them to
	EXTRA_DIST.

2008-07-12  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	reviewed by: <delete if not using a buddy>

	* data/images/Makefile.am:
	* plugins/Makefile.am:

2008-07-12  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* data/images/muine-16.svg:
	* data/images/muine-24.svg:
	* data/images/muine-32.svg:

	Added pixel-fit source files for the new renderings
	added in the previous commit.
