@@ -1,3 +1,12 @@
+2008-09-28  Luis Medinas  <metalgod@gnome.org>
+
+	* data/muine.schemas.in:
+	* src/PlaylistWindow.cs:
+
+	Fix main window position after quit muine.
+	Closes bgo #339820. Patch from Adolfo Blásquez
+	<code@infinicode.org>." 
+
 2008-09-23  Luis Medinas  <lmedinas@gnome.org>
 
 	* configure.in:
